<resources>
    <string name="app_name">КиноLife</string>
    <string name="movie">Кино</string>
    <string name="soon">Скоро</string>
    <string name="profile">Профиль</string>
    <string name="example_name">Название фильма</string>
    <string name="example_name_long">Название фильма, которое очень длинное</string>
    <string name="example_description">Описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма, описание фильма</string>
    <string name="example_date">11 авг 2021</string>
</resources>