<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="140dp"
            android:layout_height="220dp"
            android:layout_margin="@dimen/m_cv_dp"
            app:cardCornerRadius="@dimen/r_cv">

            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_luka" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/m_dp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/mine_shaft"
                tools:text="@string/example_name" />

            <TextView
                android:id="@+id/date_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/example_date" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/desc_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ms_dp"
        android:layout_marginTop="@dimen/mt_dp"
        android:layout_marginEnd="@dimen/me_dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textColor="@color/tundora"
        tools:text="@string/example_description" />

</LinearLayout>

